--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,16 +1,23 @@
-﻿<Window x:Class="CopyHelper.MainWindow"
+<Window x:Class="CopyHelper.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CopyHelper"
         xmlns:utils="clr-namespace:CopyHelper.Utilities"
+        xmlns:shell="clr-namespace:System.Windows.Shell;assembly=PresentationFramework"
         mc:Ignorable="d"
         Title="CopyHelper" Height="700" Width="1250"
-        WindowStyle="None" 
-        AllowsTransparency="True" 
+        WindowStyle="None"
+        AllowsTransparency="True"
         Background="Transparent"
+        ResizeMode="CanResize"
+        WindowStartupLocation="CenterScreen"
         PreviewKeyDown="Window_PreviewKeyDown">
+
+    <shell:WindowChrome.WindowChrome>
+        <shell:WindowChrome CaptionHeight="0" ResizeBorderThickness="6" />
+    </shell:WindowChrome.WindowChrome>
 
     <Window.Resources>
         <utils:NullToVisibilityConverter x:Key="NullToVisible" />
@@ -68,9 +75,9 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="TextBox">
-                        <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" 
-                                BorderThickness="{TemplateBinding BorderThickness}" 
-                                Background="{TemplateBinding Background}" 
+                        <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                Background="{TemplateBinding Background}"
                                 CornerRadius="6" SnapsToDevicePixels="True">
                             <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
                         </Border>
@@ -98,9 +105,9 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}" 
+                        <Border Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
-                                BorderThickness="{TemplateBinding BorderThickness}" 
+                                BorderThickness="{TemplateBinding BorderThickness}"
                                 CornerRadius="6">
                             <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Border>
@@ -135,8 +142,9 @@
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top">
-                    <Button Content="─" Style="{StaticResource CaptionButtonStyle}" Click="MinimizeButton_Click"/>
-                    <Button Content="✕" Style="{StaticResource CloseButtonStyle}" Click="CloseButton_Click"/>
+                    <Button Content="-" Style="{StaticResource CaptionButtonStyle}" Click="MinimizeButton_Click"/>
+                    <Button Content="□" Style="{StaticResource CaptionButtonStyle}" Click="MaximizeButton_Click"/>
+                    <Button Content="X" Style="{StaticResource CloseButtonStyle}" Click="CloseButton_Click"/>
                 </StackPanel>
             </Grid>
 
@@ -183,10 +191,10 @@
                                     <ColumnDefinition Width="2*" />
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
-                                <Button Grid.Column="0" Content="Start Typing" Height="40" Margin="0,0,8,0" 
+                                <Button Grid.Column="0" Content="Start Typing" Height="40" Margin="0,0,8,0"
                                         Style="{StaticResource PrimaryButton}"
                                         Command="{Binding StartTypingCommand}" />
-                                <Button Grid.Column="1" Content="Stop" Height="40" 
+                                <Button Grid.Column="1" Content="Stop" Height="40"
                                         Command="{Binding StopTypingCommand}" />
                             </Grid>
 
@@ -239,7 +247,7 @@
                                 </ItemsControl.ItemsPanel>
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
-                                        <Border Background="White" CornerRadius="8" Margin="0,0,10,10" Padding="4" Width="120" Height="90" 
+                                        <Border Background="White" CornerRadius="8" Margin="0,0,10,10" Padding="4" Width="120" Height="90"
                                                 BorderBrush="#EEE" BorderThickness="1">
                                             <Image Source="{Binding}" Stretch="UniformToFill" />
                                         </Border>
